# dte

./: .gitignore  CMakeLists.txt  plan.txt
modules/: FindSDL2.cmake
modules/apple/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake
modules/msvc/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake
src/: CMakeLists.txt  snippets.cpp
src/cmd/: CMakeLists.txt  tetris.cpp
src/game/: CMakeLists.txt  actor.cpp  actor.h  asset_manager.cpp  asset_manager.h  assets.h  game.cpp  game.h  tetris.cpp  texture.cpp  texture.h
src/game/asset/: asset_manager.cpp  asset_manager.h  assets.h  texture_job.cpp  texture_job.h  texture_store.cpp  texture_store.h
src/game/component/: block_draw.cpp  block_draw.h  draw.cpp  draw.h  gui.h  input.cpp  input.h  state.h  transform.cpp  transform.h
src/game/core/: constants.h  entity.cpp  entity.h
src/game/entities/first/: block_draw.cpp  block_draw.h  block_gui.cpp  block_gui.h  block_input.cpp  block_input.h  block_state.h  block_transform.cpp  block_transform.h
src/game/gamestates/: game_load.cpp  game_load.h  game_state.cpp  game_state.h  gameload.cpp  gameload.h  gamestate.cpp  gamestate.h  generic_loading.cpp  generic_loading.h  sandbox_state.cpp  sandbox_state.h  state_manager.cpp  state_manager.h
src/game/job/: asset_job.h  asset_job_batch.cpp  asset_job_batch.h  image_load_job.cpp  image_load_job.h  text_load_job.cpp  text_load_job.h  texture.cpp  texture.h  texture_job.cpp  texture_job.h
src/game/manager/: display_manager.cpp  display_manager.h
src/imgui/: CMakeLists.txt
