add_library(imgui
        imconfig.h
        imgui.cpp
        imgui.h
        imgui_demo.cpp
        imgui_draw.cpp
        imgui_internal.h
        imgui_tables.cpp
        imgui_widgets.cpp
        imstb_rectpack.h
        imstb_textedit.h
        imstb_truetype.h
        imgui_impl_sdl.cpp
        imgui_impl_sdl.h
        imgui_impl_sdlrenderer.cpp
        imgui_impl_sdlrenderer.h)
